@@ -1,8 +1,8 @@
 export("?", .DollarNames, CRAN.packages, Rprof, Rprofmem, RShowDoc,
        RSiteSearch, URLdecode, URLencode, View, adist, alarm, apropos,
-       aregexec, argsAnywhere, assignInNamespace, as.roman, as.person,
-       as.personList, as.relistable, aspell, aspell_package_Rd_files,
-       aspell_package_vignettes,
+       aregexec, argsAnywhere, assignInMyNamespace, assignInNamespace,
+       as.roman, as.person, as.personList, as.relistable, aspell,
+       aspell_package_Rd_files, aspell_package_vignettes,
        aspell_write_personal_dictionary_file, available.packages,
        browseEnv, browseURL, browseVignettes, bug.report,
        capture.output, checkCRAN, chooseBioCmirror, chooseCRANmirror,
@@ -13,7 +13,7 @@ export("?", .DollarNames, CRAN.packages, Rprof, Rprofmem, RShowDoc,
        edit, emacs, example, file_test, file.edit, find, fix,
        fixInNamespace, findLineNum, flush.console, formatOL, formatUL,
        getAnywhere, getCRANmirrors, getFromNamespace, getS3method,
-       getSrcDirectory, getSrcFilename, getSrcLocation, getSrcref, 
+       getSrcDirectory, getSrcFilename, getSrcLocation, getSrcref,
        glob2rx, head, head.matrix, help, help.request, help.search,
        help.start, history, install.packages, installed.packages,
        is.relistable, limitedLabels, loadhistory, localeToCharset,
